--- a/package.json
+++ b/package.json
@@ -23,13 +23,14 @@
     "form-data": "^4.0.0",
     "hardhat": "^2.9.9",
     "http-errors": "~1.6.3",
+    "jimp": "^0.16.2",
     "key-did-provider-ed25519": "^2.0.1",
     "key-did-resolver": "^2.1.0",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
     "pdf-lib": "^1.17.1",
-    "qrcode": "^1.5.0",
+    "qrcode": "^1.5.1",
     "sequelize": "^6.19.0",
     "uuid": "^8.3.2"
   },
