--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@stablelib/random": "^1.0.2",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
+    "buffer-to-data-url": "^1.0.0",
     "ceramic-cacao": "^1.4.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -22,7 +23,9 @@
     "express-fileupload": "^1.4.0",
     "form-data": "^4.0.0",
     "hardhat": "^2.9.9",
+    "heic-convert": "^1.2.4",
     "http-errors": "~1.6.3",
+    "image-convert": "^0.1.33",
     "jimp": "^0.16.2",
     "key-did-provider-ed25519": "^2.0.1",
     "key-did-resolver": "^2.1.0",
@@ -31,6 +34,7 @@
     "mysql2": "^2.3.3",
     "pdf-lib": "^1.17.1",
     "qrcode": "^1.5.1",
+    "request": "^2.88.2",
     "sequelize": "^6.19.0",
     "uuid": "^8.3.2"
   },
