--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.6",
+    "@openzeppelin/contracts": "^4.7.3",
     "@stablelib/random": "^1.0.2",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
